== 0.0.1
* Added classes for DataFrame and Vector alongwith some super-basic functions to get off the ground

== 0.0.2
* Added iterators for dataframe and vector alongwith printing functions (to_html) to interface properly with iRuby notebook.

== 0.0.2.1
* Fixed bugs with previous code and more iterators

== 0.0.2.2
* Added test cases and multiple column access through the [] operator on DataFrames

== 0.0.2.3
* Added #filter\_rows and #delete_row to DataFrame and changed #row to return a row containing a Hash of column name and value.
* Vector objects passed into a DataFrame are now duplicated so that any changes dont affect the original vector.
* Added an optional opts argument to DataFrame.
* Sending more fields than vectors in DataFrame will cause addition of nil vectors.
* Init a DataFrame without having to convert explicitly to vectors.

== 0.0.2.4
* Initialize dataframe from an array which looks like [{a: 10, b: 20}, {a: 11, b: 12}]. Works for parsed JSON.